// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextBoxField should render correctly 1`] = `
<DocumentFragment>
  .cache-1c6wzf2-StyledBox.cache-1c6wzf2-StyledBox {
  position: relative;
}

.cache-1pygai5-StyledInput {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-1pygai5-StyledInput::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1pygai5-StyledInput::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1pygai5-StyledInput:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1pygai5-StyledInput::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1pygai5-StyledInput:hover,
.cache-1pygai5-StyledInput:focus {
  border-color: #dbdbdf;
}

.cache-1pygai5-StyledInput:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1pygai5-StyledInput::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1pygai5-StyledInput::-moz-placeholder {
  opacity: 1;
}

.cache-1pygai5-StyledInput:-ms-input-placeholder {
  opacity: 1;
}

.cache-1pygai5-StyledInput::placeholder {
  opacity: 1;
}

.cache-1auyvgb-StyledBox-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1auyvgb-StyledBox-StyledExpandable.cache-1auyvgb-StyledBox-StyledExpandable {
  overflow: hidden;
}

.cache-8s7x1q-StyledBox.cache-8s7x1q-StyledBox {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div
      class="cache-o2l7i9-StyledBox e7ah3bn0"
    >
      <div
        class="cache-1c6wzf2-StyledBox e7ah3bn0"
      >
        <input
          autocomplete="on"
          class="cache-1pygai5-StyledInput e18bmnpq0"
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="e14o3tsk0 cache-1auyvgb-StyledBox-StyledExpandable e7ah3bn0"
      >
        <div
          class="cache-8s7x1q-StyledBox e7ah3bn0"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextBoxField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-1c6wzf2-StyledBox.cache-1c6wzf2-StyledBox {
  position: relative;
}

.cache-yvs5ve-StyledInput {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #fafafb;
  border-color: #fafafb;
  color: #d4dae7;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-yvs5ve-StyledInput::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-yvs5ve-StyledInput::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-yvs5ve-StyledInput:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-yvs5ve-StyledInput::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-yvs5ve-StyledInput:hover,
.cache-yvs5ve-StyledInput:focus {
  border-color: #dbdbdf;
}

.cache-yvs5ve-StyledInput:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-yvs5ve-StyledInput::-webkit-input-placeholder {
  opacity: 1;
}

.cache-yvs5ve-StyledInput::-moz-placeholder {
  opacity: 1;
}

.cache-yvs5ve-StyledInput:-ms-input-placeholder {
  opacity: 1;
}

.cache-yvs5ve-StyledInput::placeholder {
  opacity: 1;
}

.cache-1auyvgb-StyledBox-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1auyvgb-StyledBox-StyledExpandable.cache-1auyvgb-StyledBox-StyledExpandable {
  overflow: hidden;
}

.cache-8s7x1q-StyledBox.cache-8s7x1q-StyledBox {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div
      class="cache-o2l7i9-StyledBox e7ah3bn0"
    >
      <div
        class="cache-1c6wzf2-StyledBox e7ah3bn0"
      >
        <input
          autocomplete="on"
          class="cache-yvs5ve-StyledInput e18bmnpq0"
          disabled=""
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="e14o3tsk0 cache-1auyvgb-StyledBox-StyledExpandable e7ah3bn0"
      >
        <div
          class="cache-8s7x1q-StyledBox e7ah3bn0"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;
